Fix for checklbox control to clean the dummy blank value out on delete. Fix to hints control z-index 10101. Designer panels now deal with horizontal scrolling. Form is checked for current id and sent back to beginning if not.

--- a/WebContent/applications/mobdemo/1/rapid.css
+++ b/WebContent/applications/mobdemo/1/rapid.css
@@ -65,7 +65,7 @@ table.grid span.sort {
 
 .hint {
 	position: absolute;
-	z-index: 10009;
+	z-index: 10101;
 }
 
 /* Map control resource styles */
