--- a/WebContent/applications/rapid/1/rapid.css
+++ b/WebContent/applications/rapid/1/rapid.css
@@ -50,7 +50,7 @@ table.grid span.sort {
 
 .hint {
 	position: absolute;
-	z-index: 10009;
+	z-index: 10101;
 }
 
 /* Tabs control resource styles */
